--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
   </head>
-  <body>
-    <nav class="scroll">
-
+  <body onscroll="onScroll()">
+    <nav id="navigation" class="scroll">
       <div class="wrapper">
         <a class="logo" href="#">
           <svg
@@ -96,8 +96,6 @@
           />
         </svg>
       </div>
-
-
     </nav>
     <header class="wrapper">
       <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
